# open-problems-solver

./: .env.example  .gitignore  README.md  pyproject.toml
disprover/: __init__.py  __main__.py  config.py  controller.py  models.py  operators.py  prompt_builder.py  thinking_cores.py
examples/disprover/: erdos_1082.json  erdos_97.json  ramsey_r55.json
examples/prover/: erdos_617.json  erdos_647.json  erdos_993.json  hard_baire.json  medium_primes_4n3.json  smoke_test_medium.json  smoke_test_simple.json  test_compactness.json
prover/: __init__.py  __main__.py  batch_run.py  config.py  controller.py  models.py  operators.py  thinking_cores.py  utils.py
prover/prompts/: audit_plan.txt  cross_audit.txt  decide_strategy.txt  decide_strategy_v2.txt  decompose_blocked_lemma.txt  decompose_with_strategy.txt  draft_plan.txt  extract_interface.txt  final_audit.txt  generate_strategies.txt  integrate_proof.txt  literature_audit.txt  literature_processing.txt  literature_research.txt  literature_revision.txt  prove_lemma.txt  self_audit.txt
shared/: __init__.py  agents.py  config.py  search_providers.py  utils.py
tools/: estimate_cost.py
